  * Added option of fractions for Quads.
  * Added PNG, JPEG and GIF support to ImageData:encode.
  * Added 64-bit support for Mac OS X.
  * Added premultiplied blending mode.
  * Added functions to set/get default image filter modes.
  * Added SpriteBatch:set.
  * Added new events system, with support for custom events and long event names.
  * Added sound attenuation by distance.

  * Fixed wrapping for single words.
  * Fixed tracebacks not showing filenames.
  * Fixed love.graphics.push/pop capable of causing overflows/underflows.
  * Fixed setScissor on Canvases.
  * Fixed several issues with audio, e.g. clicks and pops in mp3s.
  * Fixed crashes when bodies were destroyed during collisions.
  * Fixed bound SpriteBatches corrupting when drawing.
  * Fixed thread-safety issues with ImageData.
  * Fixed memory leaks in audio sources.
  * Fixed thread's set (previously send) accidentally changing the type.
  * Fixed SoundData allocating the wrong number of samples.
  * Fixed SpriteBatch support on Intel cards.
  * Fixed love.filesystem.lines() leaking.
  * Fixed Source controls inconsistencies.
  * Fixed most leaking on unclosed File objects.
  * Fixed crashes when operating on non-existent files.
  * Fixed a bug where empty files on windows would never reach eof.
  * Fixed crash when SoundData runs out of memory.
  * Fixed ordering of loaders, love should have priority over Lua.
  * Fixed several miscellaneous memory leaks.
  * Fixed love.filesystem's priority for require.
  * Fixed a few cases where strings with \0 in them would not be stored correctly.
  * Fixed love's startup time being in the first dt.
  * Fixed internal string conversions, they are faster now.
  * Fixed (bad) performance of ImageData:paste.

  * Renamed SpriteBatch's lock/unlock to bind/unbind.
  * Renamed Framebuffer to Canvas.
  * Renamed love.thread.send/receive to set/get.
  * Renamed love.graphics.setRenderTarget to setCanvas.

  * Removed canvas auto-clearing.